crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__error.invalid.invalid-rules-of-hooks-0de1224ce64b.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/error.invalid.invalid-rules-of-hooks-0de1224ce64b.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Hooks: Hooks must be called at the top level in the body of a function component or custom hook, and may not be called within function expressions. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 232, length: 21 }, primary: false }], help: Some("Cannot call hook within a function expression"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Hooks: Hooks must be called at the top level in the body of a function component or custom hook, and may not be called within function expressions. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 208, length: 9 }, primary: false }], help: Some("Cannot call useEffect within a function expression"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
