crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-0592bd574811.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-0592bd574811.js
---
No changes.
