crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-0e2214abc294.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-0e2214abc294.js
---
// Valid because exceptions abort rendering
function RegressionTest() {
	if (page == null) {
		throw new Error("oh no!");
	}
	useState();
}
