crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__rules-of-hooks-1ff6c3fbbc94.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/rules-of-hooks-1ff6c3fbbc94.js
---
// Valid because components can use hooks.
function ComponentWithHook() {
	useHook();
}
